# target/generated-sources/jooq/com/xeno/teensy/jooq/sample/model/tables/records/UrlRecord.java
@@ -10,8 +10,8 @@ import javax.annotation.processing.Generated;
 
 import org.jooq.Field;
 import org.jooq.Record1;
-import org.jooq.Record4;
-import org.jooq.Row4;
+import org.jooq.Record5;
+import org.jooq.Row5;
 import org.jooq.impl.UpdatableRecordImpl;
 
 
@@ -26,9 +26,9 @@ import org.jooq.impl.UpdatableRecordImpl;
     comments = "This class is generated by jOOQ"
 )
 @SuppressWarnings({ "all", "unchecked", "rawtypes" })
-public class UrlRecord extends UpdatableRecordImpl<UrlRecord> implements Record4<Integer, String, String, Integer> {
+public class UrlRecord extends UpdatableRecordImpl<UrlRecord> implements Record5<Integer, String, String, Integer, String> {
 
-    private static final long serialVersionUID = -2002264520;
+    private static final long serialVersionUID = -1286537183;
 
     /**
      * Setter for <code>teensy.url.id</code>.
@@ -90,6 +90,21 @@ public class UrlRecord extends UpdatableRecordImpl<UrlRecord> implements Record4
         return (Integer) get(3);
     }
 
+    /**
+     * Setter for <code>teensy.url.expirydate</code>.
+     */
+    public UrlRecord setExpirydate(String value) {
+        set(4, value);
+        return this;
+    }
+
+    /**
+     * Getter for <code>teensy.url.expirydate</code>.
+     */
+    public String getExpirydate() {
+        return (String) get(4);
+    }
+
     // -------------------------------------------------------------------------
     // Primary key information
     // -------------------------------------------------------------------------
@@ -100,17 +115,17 @@ public class UrlRecord extends UpdatableRecordImpl<UrlRecord> implements Record4
     }
 
     // -------------------------------------------------------------------------
-    // Record4 type implementation
+    // Record5 type implementation
     // -------------------------------------------------------------------------
 
     @Override
-    public Row4<Integer, String, String, Integer> fieldsRow() {
-        return (Row4) super.fieldsRow();
+    public Row5<Integer, String, String, Integer, String> fieldsRow() {
+        return (Row5) super.fieldsRow();
     }
 
     @Override
-    public Row4<Integer, String, String, Integer> valuesRow() {
-        return (Row4) super.valuesRow();
+    public Row5<Integer, String, String, Integer, String> valuesRow() {
+        return (Row5) super.valuesRow();
     }
 
     @Override
@@ -134,6 +149,11 @@ public class UrlRecord extends UpdatableRecordImpl<UrlRecord> implements Record4
     }
 
     @Override
+    public Field<String> field5() {
+        return Url.URL.EXPIRYDATE;
+    }
+
+    @Override
     public Integer component1() {
         return getId();
     }
@@ -154,6 +174,11 @@ public class UrlRecord extends UpdatableRecordImpl<UrlRecord> implements Record4
     }
 
     @Override
+    public String component5() {
+        return getExpirydate();
+    }
+
+    @Override
     public Integer value1() {
         return getId();
     }
@@ -171,6 +196,11 @@ public class UrlRecord extends UpdatableRecordImpl<UrlRecord> implements Record4
     @Override
     public Integer value4() {
         return getUserid();
+    }
+
+    @Override
+    public String value5() {
+        return getExpirydate();
     }
 
     @Override
@@ -198,11 +228,18 @@ public class UrlRecord extends UpdatableRecordImpl<UrlRecord> implements Record4
     }
 
     @Override
-    public UrlRecord values(Integer value1, String value2, String value3, Integer value4) {
+    public UrlRecord value5(String value) {
+        setExpirydate(value);
+        return this;
+    }
+
+    @Override
+    public UrlRecord values(Integer value1, String value2, String value3, Integer value4, String value5) {
         value1(value1);
         value2(value2);
         value3(value3);
         value4(value4);
+        value5(value5);
         return this;
     }
 
@@ -220,12 +257,13 @@ public class UrlRecord extends UpdatableRecordImpl<UrlRecord> implements Record4
     /**
      * Create a detached, initialised UrlRecord
      */
-    public UrlRecord(Integer id, String shorturl, String longurl, Integer userid) {
+    public UrlRecord(Integer id, String shorturl, String longurl, Integer userid, String expirydate) {
         super(Url.URL);
 
         set(0, id);
         set(1, shorturl);
         set(2, longurl);
         set(3, userid);
+        set(4, expirydate);
     }
 }
